fixed the popup positioning
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>

--- a/assets/scss/shortcodes/_people-map.scss
+++ b/assets/scss/shortcodes/_people-map.scss
@@ -1,9 +1,8 @@
 #map {
 	height: 500px;
 
-	div {
-		width: max-content;
-		max-width: unset;
+	div.gm-style-iw {
+		max-width: fit-content !important;
 	}
 
 	a {
