--- a/assets/scss/shortcodes/_people-map.scss
+++ b/assets/scss/shortcodes/_people-map.scss
@@ -31,3 +31,82 @@
 		margin: 8px !important;
 	}
 }
+
+.person {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	background-color: var(--white);
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+	border-radius: 3px;
+
+	p {
+		margin-top: 0;
+	}
+
+	&__image {
+		display: block;
+		height: auto;
+		width: 100%;
+		img {
+			object-fit: cover;
+			width: 100%;
+			height: 280px;
+			@media (min-width: 1200px) {
+				height: 250px;
+			}
+			border-top-left-radius: 3px;
+			border-top-right-radius: 3px;
+		}
+	}
+	&__padding {
+		width: 100%;
+		height: 100%;
+		padding: 0px 12px 24px 18px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	&__name {
+		font-size: 22px;
+		margin-top: 30px;
+		line-height: 130%;
+		@media (min-width: 1200px) {
+			margin-top: 24px;
+		}
+	}
+
+	&__company, &__title, &__location {
+		font-size: 16px;
+		line-height: 140%;
+		color: var(--gray-800);
+	}
+	&__title {
+		font-style: italic;
+	}
+	&__social {
+		margin-top: auto;
+		a {
+			display: inline-block;
+			&:hover {
+				svg {
+					color: var(--link-color);
+				}
+			}
+		}
+		svg {
+			height: 30px;
+			width: auto;
+			color: var(--black);
+		}
+		&-margin {
+			margin-top: 40px;
+			> *:not(:last-child) {
+				margin-right: 10px;
+			}
+		}
+	}
+	&__bio {
+		margin-top: 30px;
+	}
+}
