Update CSS variables through theme, #50
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -20,7 +20,7 @@
         p {
             margin-block-start: 0;
             margin-block-end: 0;
-            color: #000;
+            color: var(--text-color);
             font-family: var(--rounded-font-family);
             font-size: 14px;
             @media (min-width: 600px) {
