--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -9,6 +9,7 @@
   --black: #000000;
   --white: #ffffff;
   --link-color: var(--primary-600);
+  --link-color-hover: var(--primary-700);
   --menu-link-color: var(--black);
   --menu-link-color-hover: var(--gray-800);
   --footer-link-color: var(--white);
