--- a/assets/scss/_language-selector.scss
+++ b/assets/scss/_language-selector.scss
@@ -1,7 +1,7 @@
 .dropdown {
     position: relative;
     border-radius: 6px;
-    background: #fff;
+    background: var(--white);
     font-weight: 700;
     line-height: normal;
     font-size: 16px;
@@ -49,7 +49,7 @@
 
 .dropdown-current {
     position: relative;
-    background: #fff;
+    background: var(--white);
     display: inline-flex;
     align-items: center;
     justify-content: space-between;
@@ -134,14 +134,14 @@
             line-height: 24px;
             text-decoration: none;
             display: block;
-            color: var(--gray-700);
+            color: var(--menu-link-color-hover);
             &:hover {
-                color: var(--black);
+                color: var(--menu-link-color);
             }
             @media (min-width: $min-desktop) {
-                color: var(--black);
+                color: var(--menu-link-color);
                 &:hover {
-                    color: var(--gray-700);
+                    color: var(--menu-link-color-hover);
                 }
             }
         }
