--- a/assets/scss/_tables.scss
+++ b/assets/scss/_tables.scss
@@ -4,9 +4,9 @@ table {
     border-spacing: 0;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-    border: 1px #cccccc solid;
+    border: 1px var(--gray-400) solid;
     th {
-        background-color: #e9e9e9;
+        background-color: var(--gray-300);
         font-weight: 700;
     }
     th:first-child,
@@ -24,12 +24,12 @@ table {
         border-top-right-radius: 12px;
     }
     tr td {
-        border-bottom: 1px #cccccc solid;
+        border-bottom: 1px var(--gray-400) solid;
     }
     td,
     th {
         &:not(:last-child) {
-            border-right: 1px #cccccc solid;
+            border-right: 1px var(--gray-400) solid;
         }
     }
 }
