Remove post summaries and set max length
Signed-off-by: Andrew Aiken <andrew.aiken@machinemetrics.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
   {{ range .Pages }}
     <article>
       <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-      <p>{{ .Summary }}</p>
+      <p>{{ .Summary | plainify }}</p>
     </article>
   {{ end }}
 {{ end }}
