--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -5,7 +5,7 @@
       <article class="blog-item">
         <h2 class="blog-item__title"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
         {{- partial "blog/byline.html" . }}
-        <p class="blog-item__summary">{{ .Summary }}</p>
+        <p class="blog-item__summary">{{ .Summary | plainify }}</p>
       </article>
   {{ end }}
   {{ template "_internal/pagination.html" . }}
