--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 .header {
     width: 100%;
     background: var(--white);
@@ -22,7 +24,7 @@
         height: 20px;
         z-index: 10;
         background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             background: linear-gradient(180deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0) 100%);
         }
     }
@@ -34,7 +36,7 @@
         align-items: center;
         align-content: center;
         height: 60px;
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             height: 80px;
         }
     }
@@ -49,7 +51,7 @@
         object-fit: contain;
         max-width: 100px;
         max-height: 40px;
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             max-width: 130px;
             max-height: 50px;
         }
@@ -66,11 +68,11 @@
         font-family: var(--condensed-font-family);
         font-weight: 700;
         font-size: 20px;
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             flex-shrink: 0;
             font-size: 22px;
         }
-        @media (min-width: $desktop-width) {
+        @media (min-width: variables.$desktop-width) {
             font-size: 28px;
         }
     }
@@ -84,7 +86,7 @@
         padding-left: var(--gutter);
         padding-right: var(--gutter);
     }
-    @media (min-width: $min-desktop) {
+    @media (min-width: variables.$min-desktop) {
         display: flex;
         align-items: center;
         width: 100%;
@@ -92,7 +94,7 @@
         padding-right: 0px;
         margin-left: clamp(50px, 5vw, 75px);
     }
-    @media (max-width: $mobile-max) {
+    @media (max-width: variables.$mobile-max) {
         position: fixed;
         left: -100%;
         top: 60px;
@@ -115,10 +117,10 @@
     &__wrapper {
         margin-left: 0; // reset.
         padding-left: 0; // reset.
-        @media (max-width: $mobile-max) {
+        @media (max-width: variables.$mobile-max) {
             padding-top: 10px;
         }
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             display: flex;
         }
         // All Links.
@@ -180,7 +182,7 @@
         }
     }
     &__cta-language-wrapper {
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             margin-left: auto;
             display: flex;
             align-items: center;
@@ -188,7 +190,7 @@
     }
     &__search-language-wrapper {
         display: flex;
-        @media (max-width: $mobile-max) {
+        @media (max-width: variables.$mobile-max) {
             flex-direction: row-reverse;
             align-items: flex-start;
             gap: 40px;
@@ -200,10 +202,10 @@
         width: 100%;
         text-align: center;
         margin-bottom: 0;
-        @media (max-width: $mobile-max) {
+        @media (max-width: variables.$mobile-max) {
             font-size: 18px;
         }
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             width: max-content;
             margin-top: 0; // reset.
             margin-left: 30px;
@@ -212,11 +214,11 @@
 
     // Language Selector.
     .language-selector {
-        @media (max-width: $mobile-max) {
+        @media (max-width: variables.$mobile-max) {
             flex-shrink: 0;
             flex-grow: 1;
         }
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             margin-left: 30px;
         }
     }
@@ -232,10 +234,10 @@
             &:hover {
                 filter: invert(38%) sepia(7%) saturate(283%) hue-rotate(169deg) brightness(99%) contrast(94%);
             }
-            @media (min-width: $min-desktop) {
+            @media (min-width: variables.$min-desktop) {
                 margin-left: 30px;
             }
-            @media (max-width: $mobile-max) {
+            @media (max-width: variables.$mobile-max) {
                 margin-top: 30px;
             }
         }
@@ -243,10 +245,10 @@
 
     // Top row only.
     .top-menu-item {
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             margin-right: 20px;
         }
-        @media (min-width: $desktop-width) {
+        @media (min-width: variables.$desktop-width) {
             margin-right: 60px;
         }
         > a {
@@ -261,7 +263,7 @@
             &.is-open {
                 border-width: 4px;
             }
-            @media (min-width: $min-desktop) {
+            @media (min-width: variables.$min-desktop) {
                 border-bottom: 0;
             }
         }
@@ -282,13 +284,13 @@
                 @media (prefers-reduced-motion: reduce) {
                     transition: none;
                 }
-                @media (min-width: $min-desktop) {
+                @media (min-width: variables.$min-desktop) {
                     margin-top: 3px;
                 }
             }
         }
         > a {
-            @media (min-width: $min-desktop) {
+            @media (min-width: variables.$min-desktop) {
                 cursor: default;
             }
             &::after {
@@ -306,7 +308,7 @@
                 @media (prefers-reduced-motion: reduce) {
                     transition: none;
                 }
-                @media (min-width: $min-desktop) {
+                @media (min-width: variables.$min-desktop) {
                     margin-left: 10px;
                 }
             }
@@ -327,7 +329,7 @@
         display: none;
         padding-top: 25px;
         padding-bottom: 25px;
-        @media (min-width: $min-desktop) {
+        @media (min-width: variables.$min-desktop) {
             padding-top: 15px;
             padding-bottom: 0;
             display: block;
@@ -349,7 +351,7 @@
         &__nav {
             margin-left: 0; // reset.
             padding-left: 0; // reset.
-            @media (min-width: $min-desktop) {
+            @media (min-width: variables.$min-desktop) {
                 background-color: var(--white);
                 border-radius: 12px;
                 border: 1px solid var(--gray-200);
