--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,26 +1,26 @@
-@import "variables";
+@use "variables";
 
-@import "normalize";
-@import "accessibility";
-@import "fonts";
-@import "global";
-@import "typography";
-@import "header";
-@import "hamburger";
-@import "language-selector";
-@import "footer";
-@import "buttons";
-@import "iframe";
-@import "images";
-@import "horizontal-rule";
-@import "content";
-@import "accordion";
-@import "blog";
-@import "pagination";
-@import "breadcrumb";
-@import "tables";
-@import "shortcodes/card";
-@import "shortcodes/columns";
-@import "shortcodes/toc";
-@import "shortcodes/intro";
-@import "shortcodes/youtube-enhanced";
+@use "normalize";
+@use "accessibility";
+@use "fonts";
+@use "global";
+@use "typography";
+@use "header";
+@use "hamburger";
+@use "language-selector";
+@use "footer";
+@use "buttons";
+@use "iframe";
+@use "images";
+@use "horizontal-rule";
+@use "content";
+@use "accordion";
+@use "blog";
+@use "pagination";
+@use "breadcrumb";
+@use "tables";
+@use "shortcodes/card";
+@use "shortcodes/columns";
+@use "shortcodes/toc";
+@use "shortcodes/intro";
+@use "shortcodes/youtube-enhanced";
