--- a/assets/scss/_horizontal-rule.scss
+++ b/assets/scss/_horizontal-rule.scss
@@ -1,9 +1,11 @@
+@use "variables";
+
 hr {
     opacity: 0.25;
     color: var(--black);
     margin-top: 30px;
     margin-bottom: 30px;
-    @media (min-width: $min-desktop) {
+    @media (min-width: variables.$min-desktop) {
         margin-top: 60px;
         margin-bottom: 60px;
     }
