--- a/assets/scss/_iframe.scss
+++ b/assets/scss/_iframe.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 iframe {
     border-top-width: 0;
     border-right-width: 0;
@@ -17,7 +19,7 @@ iframe {
     background-color: var(--gray-200);
     margin-top: 30px;
     margin-bottom: 30px;
-    @media (min-width: $min-desktop) {
+    @media (min-width: variables.$min-desktop) {
         margin-top: 60px;
         margin-bottom: 60px;
     }
