--- a/assets/scss/shortcodes/_toc.scss
+++ b/assets/scss/shortcodes/_toc.scss
@@ -1,7 +1,9 @@
+@use "../variables";
+
 .toc {
     margin-top: 30px;
     margin-bottom: 30px;
-    @media (min-width: $min-desktop) {
+    @media (min-width: variables.$min-desktop) {
         margin-top: 60px;
         margin-bottom: 60px;
     }
