--- a/assets/scss/shortcodes/_youtube-enhanced.scss
+++ b/assets/scss/shortcodes/_youtube-enhanced.scss
@@ -1,3 +1,5 @@
+@use "../variables";
+
 .lite-youtube-fallback {
     aspect-ratio: 16 / 9;
     /* matches YouTube player */
@@ -32,7 +34,7 @@
 lite-youtube {
     margin-top: 30px;
     margin-bottom: 30px;
-    @media (min-width: $min-desktop) {
+    @media (min-width: variables.$min-desktop) {
         margin-top: 60px;
         margin-bottom: 60px;
     }
@@ -40,7 +42,7 @@ lite-youtube {
 
 lite-youtube + lite-youtube {
     margin-top: 0;
-    @media (min-width: $min-desktop) {
+    @media (min-width: variables.$min-desktop) {
         margin-top: 0;
     }
 }
