--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,4 +1,5 @@
 @use "variables";
+@use "global";
 
 .header {
     width: 100%;
@@ -43,7 +44,7 @@
 
     // Reset lists.
     ul {
-        @extend .ul-reset !optional;
+        @extend .ul-reset;
     }
 
     .logo {
